# snapit-js

./: .gitignore  Cargo.toml  build.rs  readme.md  test-fail.hbc  test.hbc  test.js
src/: main.rs  wrapper.cpp  wrapper.hpp
