[package]
name = "snapitjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = "*"

[build-dependencies]
autocxx-build = "0.26.0"
bindgen = "0.65.1"
miette = { version = "5", features = ["fancy"] }
build-target = "*"